compiler/testData/diagnostics/tests/annotations/NonAnnotationClass.kt
// RUN_PIPELINE_TILL: FRONTEND
class Foo

@<!NOT_AN_ANNOTATION_CLASS!>Foo<!> class Bar

/* GENERATED_FIR_TAGS: classDeclaration */
